Header z-index fix

--- a/app/stylus/areas/home-area.styl
+++ b/app/stylus/areas/home-area.styl
@@ -1,24 +1,12 @@
-world-clock
-    position absolute
-    top 80px
-    pointer-events none
-    z-index 10
-
-world-clock:before
-    content ''
-    background #fff
-    position absolute
-    left 0
-    bottom -10px
-    width 100%
-    height 130px
-    z-index -1
-
 .home-area
-    height 1000px
+    height 840px
+    z-index 20
+    background #fff
+    position relative
+    margin 80px 0
     .question
         position relative
-        top 340px
+        top 300px
         h1
             margin 0
             padding 0
