--- a/app/stylus/header.styl
+++ b/app/stylus/header.styl
@@ -1,7 +1,7 @@
 body > header
     background rgba(255, 255, 255, 1)
     position fixed
-    z-index 100
+    z-index 10
     top 0
     left 0
     right 0
@@ -19,7 +19,7 @@ body > header
         transform translate3d(0, 0, 0)
     .container
         clearfix()
-        border-bottom 1px solid border-color
+        border-bottom 1px solid rgba(0,0,0,0.2)
         height 80px
         box-sizing border-box
         padding 30px 0 0 0
