--- a/app/stylus/widgets/worldclock.styl
+++ b/app/stylus/widgets/worldclock.styl
@@ -1,4 +1,9 @@
 world-clock
+  clearfix()
+  position absolute
+  top 40px
+  pointer-events none
+  z-index 30
   display block
   overflow hidden
   h3
@@ -20,7 +25,15 @@ world-clock
       height 40px
       width 60px
       background-position -25px -130px
-  clearfix()
+  &:before
+    content ''
+    background none
+    position absolute
+    left 0
+    bottom -10px
+    width 100%
+    height 130px
+    z-index -1
   .digit
   .placeholder
     text
